force-app/main/default/objects/pse__Backlog_Detail_Converted__c/pse__Backlog_Detail_Converted__c.object-meta.xml
<CustomObject>
    <label>Backlog Detail Converted</label>
    <nameField>
        <displayFormat>BDC{YYYY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Backlog Detail Converted Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Backlog Details Converted</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>