force-app/main/default/objects/pse__Backlog_Detail_Converted__c/fields/pse__Backlog_Detail__c.field-meta.xml
<CustomField>
    <fullName>pse__Backlog_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Backlog Detail</label>
    <referenceTo>pse__Backlog_Detail__c</referenceTo>
    <relationshipLabel>Backlog Details Converted</relationshipLabel>
    <relationshipName>Backlog_Details_Converted</relationshipName>
    <type>Lookup</type>
</CustomField>