force-app/main/default/objects/pse__Backlog_Detail_Converted__c/fields/pse__Billings__c.field-meta.xml
<CustomField>
    <fullName>pse__Billings__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The billings amount used to calculate unscheduled revenue.</inlineHelpText>
    <label>Billings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>