force-app/main/default/objects/pse__Backlog_Detail_Converted__c/fields/pse__Bookings__c.field-meta.xml
<CustomField>
    <fullName>pse__Bookings__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The bookings amount used to calculate the unscheduled revenue amount.</inlineHelpText>
    <label>Bookings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>