force-app/main/default/objects/pse__Backlog_Detail_Converted__c/fields/pse__External_Time_Cost__c.field-meta.xml
<CustomField>
    <fullName>pse__External_Time_Cost__c</fullName>
    <label>External Time Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>