force-app/main/default/objects/pse__Backlog_Detail_Converted__c/fields/pse__Inactive_Project_Backlog__c.field-meta.xml
<CustomField>
    <fullName>pse__Inactive_Project_Backlog__c</fullName>
    <label>Inactive Project Backlog</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>