force-app/main/default/objects/pse__Backlog_Detail_Converted__c/fields/pse__Milestone_Revenue__c.field-meta.xml
<CustomField>
    <fullName>pse__Milestone_Revenue__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Milestone Revenue</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>