force-app/main/default/objects/pse__Backlog_Detail_Converted__c/fields/pse__Project__c.field-meta.xml
<CustomField>
    <fullName>pse__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Backlog Detail Converteds</relationshipLabel>
    <relationshipName>Backlog_Detail_Converteds</relationshipName>
    <type>Lookup</type>
</CustomField>