force-app/main/default/objects/pse__Backlog_Detail_Converted__c/fields/pse__Resource_Requests_Cost_Unheld__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Requests_Cost_Unheld__c</fullName>
    <label>Resource Requests Cost Unheld</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>